# jemdzem

./: .gitignore  AGENTS.md  Dockerfile  README.md  README_DOCKER.md  entrypoint.sh  fixroute.sh  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml
camera_dependencies/: Yuneec.npz
examples/: detect.py  multi_detect.py  ocr.sh  qa.py  single_detect.py
inspekcja/: camera_test.py  casual_detect.py  detect_all (copy).py  detect_all.py  detect_from_junek.py  emergency_detect.py  only_pipe_detect.py  person_detect.py  qa.py
inspekcja/mission_logs/2025-06-04_11-57-19/: person_detections.json  qa_graffiti.json  qa_outfit.json
inspekcja/raporting/: firebase_key.json.enc  push_point.py
jemdzem/: __init__.py  api_utils.py  auth.py  backend.py
jemdzem/ai/: __init__.py  client.py  detector.py  multi_detector.py  ocr.py  qa.py  single_detector.py  utils.py
modules/: get_coordinates.py
tests/: test_calc_new_coordinates.py  test_get_coordinates.py
